Tweaks to the alinia cookbook, linting, and tweaks to the alinia guardrail class.

--- a/docs/cookbook/alinia_guardrail_usage.ipynb
+++ b/docs/cookbook/alinia_guardrail_usage.ipynb
@@ -161,13 +161,13 @@
     "guardrail = AnyGuardrail.create(GuardrailName.ALINIA, \n",
     "                                endpoint=endpoint, \n",
     "                                detection_config=detection_config\n",
-    "                                blocked_response=\"Nope! Can't do that!\")\n",
+    "                                blocked_response=\"I'm sorry, Dave. I'm afraid I can't do that.\")\n",
     "```\n",
     "\n",
     "Or you can set it after the guardrail is constructed:\n",
     "\n",
     "```\n",
-    "guardrail.blocked_response = \"Nope! Can't do that!\"\n",
+    "guardrail.blocked_response = \"I'm sorry, Dave. I'm afraid I can't do that.\"\n",
     "```\n"
    ]
   },
@@ -178,7 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "guardrail.blocked_response = \"I'm sorry, Dave. I'm afraid I can't do that\"\n",
+    "guardrail.blocked_response = \"I'm sorry, Dave. I'm afraid I can't do that.\"\n",
     "\n",
     "# Resetting detection config\n",
     "\n",
@@ -212,7 +212,7 @@
    "id": "14",
    "metadata": {},
    "source": [
-    "Output: `{'action': 'block', 'output': \"Nope! Can't do that!\"}`"
+    "Output: `{'action': 'block', 'output': \"I'm sorry, Dave. I'm afraid I can't do that.\"}`"
    ]
   }
  ],
